Moved Manifest.xml 'package' => build.gradle 'namespace'.

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+  namespace 'com.jaredrummler.android.colorpicker.demo'
   compileSdkVersion buildConfig.compileSdk
   defaultConfig {
     applicationId "com.jaredrummler.android.colorpicker.demo"
