--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -16,9 +16,7 @@
   ~
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jaredrummler.android.colorpicker.demo">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
