Migrated build.gradle "lintOptions" => "lint"

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -17,9 +17,9 @@ android {
             minifyEnabled false
         }
     }
-    lintOptions {
-        checkReleaseBuilds false
+    lint {
         abortOnError false
+        checkReleaseBuilds false
     }
 }
 
